# bookpipe

./: CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
bookpipe/: __init__.py  __main__.py  agent.py  clean.py  cli.py  config.py  cover.py  encoding.py  epub_builder.py  meta.py  segment.py  stats.py
bookpipe/assets/: style.css
tests/: test_agent.py  test_clean.py  test_cli_helpers.py  test_encoding.py  test_epub_builder.py  test_meta.py  test_segment.py  test_segment_dedup.py  test_stats.py
