[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bookpipe"
version = "0.1.0"
description = "把粗糙中文 TXT 小说自动转成排版精美、带目录的 EPUB"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "charset-normalizer>=3.3",
    "EbookLib>=0.18",
    "lxml>=5.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
bookpipe = "bookpipe.cli:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle 错误、pyflakes、import 排序

[tool.setuptools]
packages = ["bookpipe"]

[tool.setuptools.package-data]
bookpipe = ["assets/*.css"]
